# kolosal-agent

./: .env.template  .gitattributes  .gitignore  .gitmodules  CMAKE_OPTIONS.md  CMakeLists.txt  CONFIGURATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  SEQUENTIAL_WORKFLOW_API_GUIDE.md  WEB_SEARCH_INTEGRATION_SUMMARY.md  WORKFLOW_QUICK_START.md  agent.yaml  agent_config.yaml  build.bat  build.sh  config.example.yaml  config.yaml  deep_research.yaml  deep_research_config.yaml  retrieval_config.yaml  run_workflow_demo.bat  sequential.yaml  simple_test_main.cpp  simple_thread_test.cpp  test_http_server.cpp  test_orchestrator_workflow.yaml  workflow.yaml  workflow_config.yaml  workflow_request_template.json
config/: config.example.yaml  kolosal_server_config.yaml  server.yaml
configs/: agent.yaml  config.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEEP_RESEARCH_GUIDE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  KOLOSAL_SERVER_INTEGRATION.md  MCP_INTEGRATION.md  QUICK_START.md  README.md  SIMPLE_EXECUTE_ENDPOINT.md  TESTING.md  TROUBLESHOOTING.md  WEB_SEARCH_INTEGRATION_GUIDE.md  WORKFLOW_CONFIGURATION_GUIDE.md  WORKFLOW_ENGINE.md  WORKFLOW_GUIDE.md  WORKFLOW_IMPLEMENTATION_SUMMARY.md  WORKFLOW_YAML_USAGE.md  api.md  config-migration.md  config.md  decision-brief-system.md  development.md  environment-variables.md  install.md  quickstart.md  research.md  retrieval.md
examples/: conditional_workflow.yaml  consensus_workflow.yaml  deep_research.cpp  deep_research_agent_demo.cpp  mcp_integration_example.cpp  parallel_workflow.yaml  pipeline_workflow.yaml  simple_test.yaml  standalone_deep_research.cpp  web_search_demo.cpp  workflow_example.cpp
improvement_reports/: MASTER_IMPROVEMENT_REPORT.md  NAMING_IMPROVEMENTS_REPORT.md  README.md
include/: agent.hpp  agent_config.hpp  agent_config_validator.hpp  agent_core.hpp  agent_data.hpp  agent_factory.hpp  agent_interfaces.hpp  agent_manager.hpp  agent_memory_manager.hpp  agent_orchestrator.hpp  agent_planning_system.hpp  agent_roles.hpp  builtin_function_registry.hpp  builtin_functions.hpp  client.hpp  document_agent_service.hpp  document_service_manager.hpp  event_system.hpp  export.hpp  function_execution_manager.hpp  function_manager.hpp  http_client.hpp  http_server.hpp  job_manager.hpp  kolosal_logger.hpp  kolosal_server_client.h  loading_animation.hpp  logger.hpp  logger_advanced.hpp  memory_manager.hpp  message_router.hpp  metrics.hpp  model_advanced.hpp  model_file.hpp  model_interface.hpp  multi_agent_system.hpp  path_validator.hpp  planning_system.hpp  research_brief.hpp  retrieval_enhanced.hpp  (+17 more)
src/: agent_config_validator.cpp  agent_core.cpp  agent_data.cpp  agent_factory.cpp  agent_interfaces.cpp  agent_memory_manager.cpp  agent_orchestrator.cpp  agent_planning_system.cpp  agent_roles.cpp  builtin_function_registry.cpp  builtin_functions.cpp  document_agent_service.cpp  document_service_manager.cpp  event_system.cpp  function_execution_manager.cpp  function_manager.cpp  http_client.cpp  job_manager.cpp  kolosal_launcher.c  kolosal_server_client.cpp  loading_animation.cpp  loading_animation_utils.cpp  logger_system.cpp  main.cpp  memory_manager.cpp  message_router.cpp  multi_agent_system.cpp  planning_system.cpp  sequential_workflow.cpp  server_client_interface.cpp  server_logger_adapter.cpp  (+9 more)
tests/: CMakeLists.txt  KOLOSAL_AGENT_TEST_README.md  README.md  TEST_MODE_GUIDE.md  minimal_test_demo.cpp  run_tests.ps1  run_tests.sh  security_improvements_test.cpp  simple_test_demo.cpp  test_agent.cpp  test_agent_config.cpp  test_agent_execution.cpp  test_agent_manager.cpp  test_config_manager.cpp  test_deep_research.cpp  test_deep_research_functions.cpp  test_error_scenarios.cpp  test_http_server.cpp  test_integration.cpp  test_kolosal_client.cpp  test_kolosal_server_launcher.cpp  test_logger.cpp  test_main_executable.cpp  test_main_integration.cpp  test_main_integration_simple.cpp  test_model_interface.cpp  test_retrieval_agent.cpp  test_retrieval_agent_README.md  test_retrieval_functions.cpp  test_retrieval_manager.cpp  test_workflow_config.cpp  test_workflow_manager.cpp  test_workflow_orchestrator.cpp  test_workflow_types.cpp
tests/benchmarks/: benchmark_agent_operations.cpp  benchmark_api_performance.cpp  benchmark_memory_operations.cpp  benchmark_workflow_execution.cpp
tests/examples/: DEEP_RESEARCH_TESTING_GUIDE.md  run_deep_research_tests.ps1  run_deep_research_tests.sh
tests/fixtures/: deep_research_test_config.yaml  test_config.yaml  test_fixtures.cpp  test_fixtures.hpp
tests/integration/: test_api_endpoints.cpp  test_configuration_loading.cpp  test_full_system_integration.cpp  test_mcp_integration.cpp  test_multi_agent_workflows.cpp  test_server_integration.cpp  test_workflow_integration.cpp
tests/integration/examples/: test_deep_research_agent_integration.cpp
tests/mocks/: mock_agent_components.cpp  mock_agent_components.hpp  mock_deep_research_components.hpp  mock_filesystem.cpp  mock_filesystem.hpp  mock_llm_service.cpp  mock_llm_service.hpp
tests/performance/: test_agent_performance.cpp  test_concurrent_execution.cpp  test_memory_performance.cpp  test_workflow_performance.cpp  test_workflow_performance_simple.cpp
tests/performance/examples/: test_deep_research_agent_performance.cpp
tests/unit/: placeholder_tests.cpp
tests/unit/agent/: test_agent_core.cpp  test_agent_core_simple.cpp  test_agent_factory.cpp  test_agent_interfaces.cpp  test_agent_memory_manager.cpp  test_agent_planning_system.cpp  test_agent_roles.cpp  test_multi_agent_system.cpp
tests/unit/api/: test_http_client.cpp  test_message_router.cpp  test_simple_http_server.cpp
tests/unit/config/: test_yaml_configuration_parser.cpp
tests/unit/examples/: test_deep_research_agent.cpp  test_deep_research_agent_mocked.cpp  test_deep_research_agent_simple.cpp
tests/unit/execution/: test_function_execution_manager.cpp  test_task_job_manager.cpp
tests/unit/workflow/: test_conditional_workflow.cpp  test_consensus_workflow.cpp  test_pipeline_workflow.cpp  test_sequential_workflow.cpp  test_workflow_engine.cpp
(+236 files in other folders)
